@@ -1,3 +1,15 @@
+2016-12-07  Geoffrey Garen  <ggaren@apple.com>
+
+        Renamed source => parentSource
+        https://bugs.webkit.org/show_bug.cgi?id=165570
+
+        Reviewed by Keith Miller.
+
+        For less confuse.
+
+        * bytecode/UnlinkedFunctionExecutable.cpp:
+        (JSC::UnlinkedFunctionExecutable::UnlinkedFunctionExecutable):
+
 2016-12-07  Yusuke Suzuki  <utatane.tea@gmail.com>
 
         [JSC] Drop translate phase in module loader
